discussion/kv_engine/182458/182458_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54463: Add VBQueueItemCtx::deduplicate

Change-Id: I53869150ee1621d3e41d5e6c64b697934a47a3e8

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-11-08 16:14:28.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-11-08 16:14:40.000000000
Message: 
Patch Set 1: Well-Formed-1

Branch restricted. PLEASE READ this URL: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/323763/artifact/restricted.html : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-11-08 17:23:32.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/536/ : FAILURE

Compile error at c:\jenkins\workspace\kv_engine-windows-neo\kv_engine\engines\ep\tests\module_tests\vbucket_test.h(101): error C2440: "default argument": cannot convert from "initializer list" to "const VBQueueItemCtx &" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/536/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/397/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/vbucket_queue_item_ctx.h:57:26: error: unknown type name "Configuration" [clang-diagnostic-error]
    VBQueueItemCtx(const Configuration& config)
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/vbucket_queue_item_ctx.h:67:26: error: unknown type name "Configuration" [clang-diagnostic-error]
                   const Configuration& config)
                         ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/397/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/vbucket_queue_item_ctx.h:57:26:
error: unknown type name "Configuration" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/397/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/642/ : FAILURE

Compile error at [2022-11-08T16:16:57.384Z] ../kv_engine/engines/ep/tests/module_tests/vbucket_test.h:101:60:
error: no matching constructor for initialization of "const VBQueueItemCtx &"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/642/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/399/ : FAILURE

Compile error at [2022-11-08T16:21:32.966Z] ../kv_engine/engines/ep/tests/module_tests/vbucket_test.h:101:67:
error: could not convert ?<brace-enclosed initializer list>()? from ?<brace-enclosed initializer list>? to ?const VBQueueItemCtx&?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/399/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/399/ : FAILURE

Compile error at [2022-11-08T17:22:39.159Z] ../kv_engine/engines/ep/tests/module_tests/vbucket_test.h:101:60:
error: no matching constructor for initialization of "const VBQueueItemCtx &"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/399/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/412/ : FAILURE

Compile error at [2022-11-08T17:15:58.594Z] ../kv_engine/engines/ep/tests/module_tests/vbucket_test.h:101:60:
error: no matching constructor for initialization of "const VBQueueItemCtx &"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/412/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/421/ : FAILURE

Compile error at [2022-11-08T17:18:53.803Z] ../kv_engine/engines/ep/tests/module_tests/vbucket_test.h:101:60:
error: no matching constructor for initialization of "const VBQueueItemCtx &"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/421/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/422/ : FAILURE

Compile error at [2022-11-08T17:21:29.363Z] ../kv_engine/engines/ep/tests/module_tests/vbucket_test.h:101:67:
error: could not convert ?<brace-enclosed initializer list>()? from ?<brace-enclosed initializer list>? to ?const VBQueueItemCtx&?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/422/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/412/ : FAILURE

Compile error at [2022-11-08T17:22:30.291Z] ../kv_engine/engines/ep/tests/module_tests/vbucket_test.h:101:67:
error: could not convert ?<brace-enclosed initializer list>()? from ?<brace-enclosed initializer list>? to ?const VBQueueItemCtx&?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/412/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21050/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/387/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
